--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,9 +11,10 @@ a {
 }
 .hero {
   width: 100%;
-  height: 100vh;
-  background: url(img/bg.png);
+  height: 55vh;
+  background: url(/assets/img/bg.png);
   background-size: cover;
+ /* background-color: gold; */
 }
 nav {
   display: flex;
@@ -76,16 +77,18 @@ nav ul li a:hover:after {
   left: 5%;
 }
 .content2 {
-  width: 90%;
+  width: 70%;
   
 }
 .content .title {
   color: #0a0a0a;
-  font-size: 20px;
+  font-size: 70px;
   text-transform: uppercase;
-  letter-spacing: 4px;
+  letter-spacing: 50px;
+  text-align: center;
   display: inline-block;
-  margin-bottom: 20px;
+  margin-top: 5%;
+  margin-left: 10%;
   background: linear-gradient(
     120deg,
     #1c99fe 20.69%,
@@ -97,11 +100,12 @@ nav ul li a:hover:after {
 }
 .content h1 {
   color: #1f1f25;
-  font-size: 75px;
+  font-size: 25px;
   font-weight: 900;
   line-height: 90px;
-  text-transform: inherit;
-  text-decoration-line: underline;
+  text-transform: uppercase;
+  text-align: center;
+  letter-spacing: 30px;
   width: 100%;
 }
 .content h2 {
@@ -113,19 +117,23 @@ nav ul li a:hover:after {
   line-height: 50px;
   text-transform: inherit;
   width: 100%;
+  margin-left: 40%;
 }
+
 .content h1 span {
-  color: #fd4747;
+  color: red;
 }
+
 .content p {
   width: 100%;
   color: #202020;
   margin-bottom: 10px;
+  margin-left: 40%;
 }
 
 .float-left {
   float: left;
-  margin-right: 25px;
+  margin-right: 2%;
   
 }
 
@@ -143,11 +151,11 @@ nav ul li a:hover:after {
 
 #Home,
 #About,
-#Service,
+#Skills,
 #Portfolio,
 #Blog,
 #Contact {
-  padding: 50px;
+  padding: 9%;
   margin: 10px auto;
   font-size: 20px;
   text-align: justify;
@@ -155,9 +163,10 @@ nav ul li a:hover:after {
 
 #Home img,
 #About img,
-#Service img,
+#Skills img,
 #Portfolio img,
 #Blog img,
 #Contact img {
-  max-width: 500px;
+  max-width: 300px;
+  padding-top: 20px;
 }
