--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,145 +1,40 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
+body {
+    position: relative; 
 }
-a {
-  text-decoration: none;
+
+#section1 {padding-top:50px;height:500px;color: #fff; background-color: #1E88E5;}
+#section2 {padding-top:50px;height:500px;color: #fff; background-color: #673ab7;}
+#section3 {padding-top:50px;height:500px;color: #fff; background-color: #ff9800;}
+#section4 {padding-top:50px;height:500px;color: #fff; background-color: #00bcd4;}
+#section5 {padding-top:50px;height:500px;color: #fff; background-color: #009688;}
+
+nav {
+  padding: 0px 0px;
 }
+
 .hero {
   width: 100%;
   height: 55vh;
-  background: url(/assets/img/bg.png);
-  background-size: cover;
- /* background-color: gold; */
+  
 }
-nav {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 30px 100px;
-}
-.logo {
-  max-height: 100px;
-}
-nav ul li {
-  list-style: none;
-  display: inline-block;
-  padding: 10px 20px;
-}
-nav ul li a {
-  color: #1d1d24;
-  position: relative;
-  padding: 5px 0;
-}
-nav ul li a:hover {
-  color: #fd4766;
-}
-nav ul li a:after {
-  content: "";
-  position: absolute;
-  left: 0;
-  width: 0;
-  height: 3px;
-  background: #fd4766;
-  transition: 0.3s;
-  bottom: 0;
-}
-nav ul li a:hover:after {
-  width: 100%;
-}
+
 .btn {
-  color: #fff;
+  color: white; 
   font-size: 16px;
   text-transform: uppercase;
-  letter-spacing: 2px;
-  padding: 16px 40px;
-  margin-top: 5%;
+  letter-spacing: 15px;
   border-radius: 500px;
-  display: inline-block;
   font-weight: 500;
   transition: all 0.4s ease-in-out;
-  background-size: 152% 100%;
-  background: #fd4766;
-  border: 2px solid #fd4766;
+  margin-left: 400%;
 }
+
 .btn:hover {
   background: transparent;
   border-color: #fd4766;
   color: #fd4766;
-}
-.content {
-  position: absolute;
-  top: 20%;
-  left: 5%;
-}
-.content2 {
-  width: 70%;
-  
-}
-.content .title {
-  color: #0a0a0a;
-  font-size: 70px;
-  text-transform: uppercase;
-  letter-spacing: 50px;
-  text-align: center;
-  display: inline-block;
-  margin-top: 5%;
-  margin-left: 10%;
-  background: linear-gradient(
-    120deg,
-    #1c99fe 20.69%,
-    #7644ff 50.19%,
-    #fd4766 79.69%
-  );
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
-.content h1 {
-  color: #1f1f25;
-  font-size: 25px;
-  font-weight: 900;
-  line-height: 90px;
-  text-transform: uppercase;
-  text-align: center;
-  letter-spacing: 30px;
-  width: 100%;
-}
-.content h2 {
-  color: #1f1f25;
-  font-size: 30px;
-  font-weight: 900;
-  font: bold;
-  text-decoration-line: underline;
-  line-height: 50px;
-  text-transform: inherit;
-  width: 100%;
-  margin-left: 40%;
-}
-
-.content h1 span {
-  color: red;
-}
-
-.content p {
-  width: 100%;
-  color: #202020;
-  margin-bottom: 10px;
-  margin-left: 40%;
-}
-
-.float-left {
-  float: left;
-  margin-right: 2%;
-  
-}
-
-.float-right {
-  float: right;
-  margin-left: 25px;
 }
 
 .footer {
@@ -147,6 +42,11 @@ nav ul li a:hover:after {
   font-size: large;
   margin-top: 50px;
   padding-bottom: 50px;
+}
+
+.float-center {
+  margin-top: 7%;
+  margin-left: 40%;
 }
 
 #Home,
@@ -159,14 +59,4 @@ nav ul li a:hover:after {
   margin: 10px auto;
   font-size: 20px;
   text-align: justify;
-}
-
-#Home img,
-#About img,
-#Skills img,
-#Portfolio img,
-#Blog img,
-#Contact img {
-  max-width: 300px;
-  padding-top: 20px;
 }
