--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,21 +1,40 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
 
+@media screen and (max-width:768px) { width: 90% }
+
 body {
     position: relative; 
 }
 
-#section1 {padding-top:50px;height:500px;color: #fff; background-color: #1E88E5;}
-#section2 {padding-top:50px;height:500px;color: #fff; background-color: #673ab7;}
-#section3 {padding-top:50px;height:500px;color: #fff; background-color: #ff9800;}
-#section4 {padding-top:50px;height:500px;color: #fff; background-color: #00bcd4;}
-#section5 {padding-top:50px;height:500px;color: #fff; background-color: #009688;}
+#section1 {padding-top:50px;height:500px;color: #fff; background-color: #553555;}
+#section2 {padding-top:50px;height:500px;color: #fff; background-color: #070707;}
+#section3 {padding-top:50px;height:500px;color: #fff; background-color: #553555;}
+#section4 {padding-top:50px;height:500px;color: #fff; background-color: #070707;}
+#section5 {padding-top:50px;height:500px;color: #fff; background-color: #553555;}
 
 .hero {
   width: 100%;
   height: 55vh;
-  
 }
 
+h1 {
+  text-decoration: underline;
+  text-transform: uppercase;
+  text-align: center;
+  font-size: 50px;
+  font-weight: 700;
+  letter-spacing: 10px;
+  font-family: 'Times New Roman', Times, serif;
+}
+
+p {
+  padding-top: 3%;
+  text-transform: uppercase;
+  text-align: center;
+  font-size: 20px;
+  font-weight: 700;
+  font-family: 'Times New Roman', Times, serif;
+}
 .btn {
   color: white; 
   font-size: 16px;
@@ -34,13 +53,14 @@ body {
 }
 
 .footer {
+  background-color: #2d2d30;
+  color: #f5f5f5;
+  padding: 32px;
   text-align: center;
-  font-size: large;
-  margin-top: 50px;
-  padding-bottom: 50px;
+  font-size: large;    
 }
 
 .float-center {
   margin-top: 7%;
-  margin-left: 40%;
+  margin-left: 41%;
 }
