--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@ body {
 
 .hero {
   width: 100%;
-  height: 55vh;
+  height: 60vh;
 }
 
 h1 {
@@ -24,6 +24,16 @@ h1 {
   font-size: 50px;
   font-weight: 700;
   letter-spacing: 10px;
+  font-family: 'Times New Roman', Times, serif;
+}
+
+h2 {
+  text-transform: uppercase;
+  text-align: center;
+  font-size: 50px;
+  font-weight: 700;
+  letter-spacing: 10px;
+  margin-top: 5%;
   font-family: 'Times New Roman', Times, serif;
 }
 
