--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
 
-@media screen and (max-width:768px) { width: 90% }
+@media screen and (max-width:768px)
+{ 
+  width: 60%;
+}
 
 body {
     position: relative; 
