--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
 
-@media (max-width:600px) {
-  width: 90%;
-}
 @media only screen and (max-width: 600px) { 
-  body { background-color: blue; } 
+  body { background-color: red;
+         width: 90%; } 
 }
 
 body {
